--- a/test/Makefile
+++ b/test/Makefile
@@ -1,11 +1,8 @@
-all: tester pavetic
+all: tester
 
 tester:
 	g++ -o tester ../lcskpp.cpp ../../lcskpp_pavetic/lcskpp/lcskpp.cpp tester.cpp -O2 -std=c++11
 
-pavetic:
-	g++ -o pavetic ../../lcskpp_pavetic/lcskpp/lcskpp.cpp pavetic_runner.cpp -O2 -std=c++11
-
 clean:
-	rm -f tester pavetic
+	rm -f tester
 
